<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.azurewebsites.osyx.myapplication.MainActivity">

    <TextView
        android:id="@+id/txtbox_select_a_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_all"
        android:layout_centerHorizontal="true"
        android:text="@string/txtbox_select_a_cat"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/button_all"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_offense"
        android:layout_centerHorizontal="true"
        android:onClick="openCategory"
        android:text="@string/button_all" />

    <Button
        android:id="@+id/button_offense"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_defense"
        android:layout_alignLeft="@+id/button_all"
        android:layout_alignStart="@+id/button_all"
        android:onClick="openCategory"
        android:text="@string/button_offense" />

    <Button
        android:id="@+id/button_defense"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_offense"
        android:layout_alignStart="@+id/button_offense"
        android:layout_centerVertical="true"
        android:onClick="openCategory"
        android:text="@string/button_defense" />

    <Button
        android:id="@+id/button_tank"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_defense"
        android:layout_alignStart="@+id/button_defense"
        android:layout_below="@+id/button_defense"
        android:onClick="openCategory"
        android:text="@string/button_tank" />

    <Button
        android:id="@+id/button_support"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_tank"
        android:layout_alignStart="@+id/button_tank"
        android:layout_below="@+id/button_tank"
        android:onClick="openCategory"
        android:text="@string/button_support" />

</RelativeLayout>
